syntax = "proto3";

import "commonmodels/pass.proto";
import "commonmodels/decimal.proto";
import "commonmodels/error.proto";

option java_package = "com.example.passmanagersvc.input.reqreply";
option java_multiple_files = true;

message CreatePassRequest {
  BDecimal purchasedFor = 1;
  string pass_owner_id = 2;
  string pass_type_id = 3;
}

message CreatePassResponse {
  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {
    Pass pass = 1;
  }

  message Failure {
    string message = 100;

    oneof error {
      Error owner_not_found_by_id = 2;
      Error pass_type_not_found_id = 3;
    }
  }
}