syntax = "proto3";

import "commonmodels/error.proto";

option java_package = "com.example.passmanagersvc.input.reqreply";
option java_multiple_files = true;

message TransferPassRequest {
  string id = 1;
  string owner_id = 2;
}

message TransferPassResponse {
  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {}

  message Failure {
    string message = 100;

    oneof error {
      Error pass_not_found_by_id = 1;
      Error pass_owner_not_found_by_id = 2;
    }
  }
}
